Revision history for {{$dist->name}}

{{$NEXT}}

0.000004 2015-07-13T06:11:23Z fcd9a2c
 [BugFix Bugfix]
 - Actually resolve the change I claimed to fix in 0.000003 because I can't count '0's.

0.000003 2015-07-13T05:40:50Z f70f711
 [BugFix]
 - Don't execute FatPacker interop test with FatPacker < 0.009017
 - Fatpacking itself should still work before this, but its just not practical to test

 [Dependencies::Stats]
 - Dependencies changed since 0.000002, see misc/*.deps* for details
 - test: (recommends: ↑1)

0.000002 2015-07-11T05:00:03Z a542c60
 [Features / find_and_pack indexes]
 - find_and_pack now generates the promised pack index as the root namespace.
 - Index will be updated oppurtunitistically when there are no fails and there are file updates being performed.

 [Internals]
 - Generated modules use a slightly more efficient initial DATA -> Scalar slurp

0.000001 2015-07-10T09:11:42Z 1b264d6
 - Initial release.