@@ -30,11 +30,13 @@ my %WriteMakefileArgs = (
     "Cwd" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
+    "Test::Builder::Module" => 0,
     "Test::Differences" => 0,
     "Test::Fatal" => 0,
     "Test::More" => "0.89",
-    "Test::Requires" => 0,
-    "Test::TempDir::Tiny" => 0
+    "Test::TempDir::Tiny" => 0,
+    "base" => 0,
+    "lib" => 0
   },
   "VERSION" => "0.000005",
   "test" => {
@@ -50,12 +52,14 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Path::Tiny" => "0.069",
+  "Test::Builder::Module" => 0,
   "Test::Differences" => 0,
   "Test::Fatal" => 0,
   "Test::More" => "0.89",
-  "Test::Requires" => 0,
   "Test::TempDir::Tiny" => 0,
   "Try::Tiny" => 0,
+  "base" => 0,
+  "lib" => 0,
   "parent" => 0,
   "strict" => 0,
   "warnings" => 0
